--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,6 @@
     <string name="BinMax">1111 1111 1111 1111 1111 1111 1111 1111 1111 1111 1111 1111 1111 1111 1111 1111</string>
     <string name="BinMaxData">1111111111111111111111111111111111111111111111111111111111111111</string>
     <string name="prefs_theme_key">theme</string>
+    <string name="prefs_data_key">data</string>
+    <string name="prefs_sign_key">sign</string>
 </resources>
