--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="prefs_theme_key">theme</string>
     <string name="prefs_data_key">data</string>
     <string name="prefs_sign_key">sign</string>
+    <string name="support_developer">Support Developer</string>
 </resources>
